force-app/main/default/objects/Order_Line_Item__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <inlineHelpText>The List price of the item</inlineHelpText>
    <label>List Price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>