force-app/main/default/objects/Order_Line_Item__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <inlineHelpText>The actual price of the item.</inlineHelpText>
    <label>Unit Price</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>