force-app/main/default/objects/Order_Line_Item__c/validationRules/ProductLookupRule.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductLookupRule</fullName>
    <active>true</active>
    <description>required</description>
    <errorConditionFormula>ISBLANK( Product__c )</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Cannot be blank Enter a value</errorMessage>
</ValidationRule>